@@ -12,15 +12,17 @@ import com.studymate.domain.chat.entity.ChatRoomParticipant;
 import com.studymate.domain.chat.repository.ChatMessageRepository;
 import com.studymate.domain.chat.repository.ChatRoomParticipantRepository;
 import com.studymate.domain.chat.repository.ChatRoomRepository;
-import com.studymate.domain.user.domain.repository.UserRepository; // 수정: UserRepository import
-import com.studymate.domain.user.entity.User;                   // 수정: User import
+import com.studymate.domain.user.domain.repository.UserRepository;
+import com.studymate.domain.user.entity.User;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -35,18 +37,15 @@ public class ChatServiceImpl implements ChatService {
 
     @Override
     public ChatRoomResponse createChatRoom(UUID creatorId, ChatRoomCreateRequest req) {
-        // 1) 방 생성
         ChatRoom room = ChatRoom.builder()
                 .roomName(req.roomName())
                 .build();
         roomRepo.save(room);
 
-        // 2) 생성자(본인) 무조건 참가
         User creator = userRepo.findById(creatorId)
                 .orElseThrow(() -> StudymateExceptionType.NOT_FOUND_USER.of());
         room.addParticipant(creator);
 
-        // 3) 나머지 초대된 사람들 추가 (본인은 건너뜀)
         for (UUID id : req.participantIds()) {
             if (id.equals(creatorId)) continue;
             User u = userRepo.findById(id)
@@ -60,26 +59,24 @@ public class ChatServiceImpl implements ChatService {
 
     @Override
     public void sendMessage(Long roomId, UUID senderId, String message) {
-        // 1) 방 존재 확인
         ChatRoom room = roomRepo.findById(roomId)
                 .orElseThrow(() -> StudymateExceptionType.NOT_FOUND_CHAT_ROOM.of());
-        // 2) 유저 존재 확인
         User sender = userRepo.findById(senderId)
                 .orElseThrow(() -> StudymateExceptionType.NOT_FOUND_USER.of());
-        // 3) 방 권한 확인 (해당 유저가 방에 속해 있는지)
+
         boolean inRoom = room.getParticipants().stream()
                 .anyMatch(p -> p.getUser().getUserId().equals(senderId));
         if (!inRoom) {
             throw StudymateExceptionType.UNAUTHORIZED_TOKEN_EXPIRED.of("방에 속한 사용자만 메시지 전송 가능");
         }
-        // 4) 메시지 저장
+
         ChatMessage msg = ChatMessage.builder()
                 .chatRoom(room)
                 .sender(sender)
                 .message(message)
                 .build();
         msgRepo.save(msg);
-        // 5) 브로드캐스트
+
         ChatMessageResponse resp = ChatMessageResponse.from(msg);
         template.convertAndSend("/sub/chat/room/" + roomId, resp);
     }
@@ -87,13 +84,10 @@ public class ChatServiceImpl implements ChatService {
     @Override
     @Transactional(readOnly = true)
     public List<ChatRoomListResponse> listChatRooms(UUID userId) {
-        // 1) 사용자가 속한 방 목록 조회
         List<ChatRoomParticipant> parts = participantRepo.findByUserUserId(userId);
-
         return parts.stream()
                 .map(p -> {
                     ChatRoom room = p.getRoom();
-                    // 2) 마지막 메시지 조회
                     ChatMessage last = msgRepo
                             .findTopByChatRoomOrderByCreatedAtDesc(room)
                             .orElse(null);
@@ -103,15 +97,35 @@ public class ChatServiceImpl implements ChatService {
                             room.getRoomName(),
                             room.getParticipants().stream()
                                     .map(cp -> toParticipantDto(cp.getUser()))
-                                    .toList(),
+                                    .collect(Collectors.toList()),
                             last != null ? last.getMessage() : "",
                             last != null ? last.getCreatedAt() : room.getCreatedAt()
                     );
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    // ParticipantDto 매핑 헬퍼
+    @Override
+    @Transactional(readOnly = true)
+    public List<ChatMessageResponse> listMessages(Long roomId, UUID userId, int page, int size) {
+        ChatRoom room = roomRepo.findById(roomId)
+                .orElseThrow(() -> StudymateExceptionType.NOT_FOUND_CHAT_ROOM.of());
+
+        boolean inRoom = participantRepo.findByUserUserId(userId).stream()
+                .anyMatch(p -> p.getRoom().getId().equals(roomId));
+        if (!inRoom) {
+            throw StudymateExceptionType.UNAUTHORIZED_TOKEN_EXPIRED.of("방에 속한 사용자만 조회 가능");
+        }
+
+        return msgRepo.findByChatRoomOrderByCreatedAtAsc(
+                        room,
+                        PageRequest.of(page, size)
+                )
+                .stream()
+                .map(ChatMessageResponse::from)
+                .collect(Collectors.toList());
+    }
+
     private ParticipantDto toParticipantDto(User user) {
         return new ParticipantDto() {
             @Override public UUID getUserId() { return user.getUserId(); }
